# netology-python

./: gh-pr-creator.py  pyproject.toml
gh_pr_creator/: __init__.py  github.py
tests/: test_github.py
